[package]
name = "graph"
version = "0.1.0"
edition = "2021"

exclude = [
    'src/main.rs',
    '.gitignore',
    '.github/*'
]

[lib]
path = 'src/graph.rs'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.3.14"
serde_json = "1.0"
