[package]
name = "mgraph"
version = "0.1.5"
edition = "2021"
readme = "./README.md"
authors = [ "Maks Tamoian <maks.tamoian@gmail.com>" ]
description = "A simple, performance-oriented graph library for Rust"
license = "MIT"
repository = "https://github.com/makstamoian/graph/"
documentation = "https://docs.rs/mgraph/latest/mgraph/"

exclude = [
    'src/main.rs',
    '.gitignore',
    '.github/*'
]

[lib]
path = 'src/graph.rs'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.3.14"
serde_json = "1.0"
